--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -19,31 +19,33 @@
   </header>
 
   <!-- Hauptbereich mit Buttons -->
-  <main class="grid grid-rows-2 grid-cols-2 place-items-center items-center gap-4 mt-8">
-    <button data-choice="paper" class="col-span-2 bg-blue-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
+  <main class="grid grid-cols-2 grid-rows-2 w-64 h-64 gap-4 bg-white rounded-lg mt-8 p-8 place-items-center">
+    <button data-choice="paper" class="size-16 bg-blue-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
       <img src="/paper.svg" alt="Paper" />
     </button>
-    <button data-choice="scissors" class="bg-red-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
+    <button data-choice="scissors" class="size-16 bg-red-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
       <img src="/scissors.svg" alt="Scissors" />
     </button>
-    <button data-choice="rock" class="bg-green-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
+    <button data-choice="rock" class="col-span-2 size-16 bg-green-500 rounded-full w-20 h-20 p-4 hover:scale-105 transition transform">
       <img src="/rock.svg" alt="Rock" />
     </button>
   </main>
 
-  <!-- Startbildschirm 
+  <!-- Startbildschirm -->
   <div id="startscreen" class="fixed inset-0 flex flex-col justify-center items-center bg-gray-900 text-white font-metalmania text-center">
     <h1 class="text-5xl mb-2">Rock</h1>
     <h2 class="text-4xl mb-2">Paper</h2>
     <h3 class="text-3xl mb-6">Scissors</h3>
     <button id="startbutton" class="bg-yellow-400 text-gray-800 px-6 py-3 rounded hover:bg-yellow-300 transition transform text-2xl">Start Game</button>
-  </div> -->
+  </div>
 
   <!-- Regeln -->
   <div id="rules" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
-    <h2 class="text-2xl font-bold mb-4 font-metalmania">Rules</h2>
-    <p class="mb-4">Rock Paper Scissors is a game that is played between two players...</p>
-    <img src="\close.svg" alt="Close" id="closebutton" />
+    <div class="relative bg-white text-gray-900 p-6 w-3/4 max-w-xl rounded shadow-lg">
+      <h2 class="text-2xl font-bold mb-4 font-metalmania">Rules</h2>
+      <p class="mb-4">Rock Paper Scissors is a game that is played between two players...</p>
+      <img src="\close.svg" alt="Close" id="closebutton" class="absolute top-2 right-2 w-6 h-6 cursor-pointer" />
+    </div>
   </div>
 
   <!-- Ergebnisanzeige -->
