--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,7 +12,11 @@
 <body class="min-h-screen bg-gradient-to-b from-blue-900 to-blue-800 text-white font-metalmania">
   <!-- Header-Bereich -->
   <header class="w-[90%] max-w-[900px] mx-auto mt-8 flex justify-between items-center border border-white p-4 rounded">
-    <h1 class="font-metalmania text-3xl font-bold">Rock Paper Scissors</h1>
+    <h1 class="font-metalmania text-3xl font-bold whitespace-pre-line">
+      Rock 
+      Paper 
+      Scissors
+    </h1>
     <div class="font-metalmania font-bold gap-2">
       <span>Score</span>
       <span id="score">0</span>
