--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -17,8 +17,8 @@
       Paper 
       Scissors
     </h1>
-    <div class="font-metalmania font-bold gap-2">
-      <span>Score</span>
+    <div class="font-metalmania text-2xl font-bold gap-2">
+      <span>Score:</span>
       <span id="score">0</span>
     </div>
   </header>
