--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <!-- Hauptbereich mit Buttons -->
-  <div id="gamecontainer" class="hidden"></div>
+  <div id="gamecontainer" class="hidden">
     <main class="grid grid-cols-2 grid-rows-2 w-64 h-64 gap-4 bg-transparent border border-white rounded-lg mt-8 p-8 place-items-center mx-auto">
       <button data-choice="paper" class="rounded-full w-20 h-20 p-4 bg-blue-500 hover:scale-105 transform transition ring-4 ring-white">
         <img src="/paper.svg" alt="Paper" />
